# genetic-optimization

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  README.md  a.txt  args  b.txt  compile-command.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  config-4-buckets.toml  config.toml  erate-data-2015.csv  erate-data-2019-t.csv  erate-data-2019-t2.csv  erate-data-2019.csv  erate-data.csv  erate-genetic.py  erate-max-2015.csv  erate-random.py  out.csv  pyproject.toml  random_tests.py  run.sh  t.txt  test_rand.csv  tests.py  tmp  tmp.csv  tmp.txt  tt.py  ttt.py
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  dataclasses.data.json  dataclasses.meta.json  io.data.json  io.meta.json  itertools.data.json  itertools.meta.json  math.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  random.meta.json  sys.data.json  sys.meta.json  test.data.json  test.meta.json  test2.data.json  test2.meta.json  timeit.data.json  timeit.meta.json  tt.data.json  tt.meta.json  ttt.data.json  ttt.meta.json  types.data.json  types.meta.json  typing.data.json  (+1 more)
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
config/: config-3-buckets.toml  config-4-buckets.toml  config-40-percenters-3-buckets.toml  config-40-percenters-4-buckets.toml
data/: 2020optimization.csv  args.txt  console-0.txt  console-1.txt  console-13.txt  console-14.txt  console-16.txt  console-17.txt  console-4.txt  console-9.txt  csv-for-optimization.csv  discount_rates_invoices_10_2019.csv  erate-max-2019-v.csv  out-0.csv
erate-data/: console-10.txt  console-11.txt  console-12.txt  console-15.txt  console-2.txt  console-3.txt  console-5.txt  console-6.txt  console-7.txt  console-8.txt  erate-2019-start.csv  erate-max-2015.csv  out-0.csv
include/: cxxopts.hpp  erate_genetic.cpp  main.cpp  tests.cpp  tmp.txt  tupletools.cpp  tupletools.hpp  utils.cpp
include/itertools/: generator.hpp  it.hpp  itertools.hpp  t.txt  tests.cpp  types.hpp
include/random_t/: lcg.cpp  mersenne_twister.cpp  mersenne_twister.hpp  random_t.cpp  random_t.hpp  tests.cpp  xor_shift.cpp
include/rng/: lcg.cpp  mersenne_twister.hpp  rng.hpp  tests.cpp  xor_shift.cpp
include/tupletools/: cot2.hpp  cot3.hpp  cot4.hpp  tests.cpp  tupletools.hpp
python/: erate_genetic.py  genetic-testing.py  marray_version.py  numba_optimizer_v0.py  numba_optimizer_v1.py  numba_version.py  numba_version_v2.py  partitions.py  run.py  tests.py  toast.py  update_output_google_sheet.py
scripts/: download_sheet_to_csv.py  erate_genetic.py  update_input_csv.py  update_output_google_sheet.py  upload_csv_to_sheet.py  utils.py
src/: .clang-format  erate_genetic.cpp  erate_genetic_py.cpp  genetic.rs  lib.rs  main.rs  test_rand.cpp  tests.cpp  tmp.txt  utils.cpp  utils.rs
