[package]
name = "erate-optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8.10"
csv = "1.3.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rayon = "1.8.1"
polars = { version = "0.37.0", features = ["lazy"] }
num_cpus = "1.16.0"
log = { version = "0.4.20", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
env_logger = "0.11.2"
tempfile = "3.10.0"
