[package]
name = "genetic_optimization"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8.10"
csv = "1.3.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rayon = "1.8.1"
polars = { version = "0.37.0", features = ["lazy"] }
num_cpus = "1.16.0"
tempfile = "3.10.0"
clap = { version = "4.5.1", features = ["derive"] }
log = { version = "0.4.20", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
env_logger = "0.11.2"
colored = "2.1.0"
chrono = "0.4.34"
