[tool.poetry]
name = "erate-optimization"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
openai = "^1.12.0"
loguru = "^0.7.2"
googleapiutils2 = "^0.13.8"
ipinfo = "^5.0.1"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.1.4.231227"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
