[tool.poetry]
name = "erate-optimization"
version = "0.2.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
openai = "^1.65.2"
loguru = "^0.7.2"
googleapiutils2 = "^0.16.1"
ipinfo = "^5.1.1"
pyarrow = "^19.0.1"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
